# pyi2c

./: README.md  pip_upload.sh  setup.cfg  setup.py
src/pyi2c/: pyi2c.py
tests/: getBit.py  i2c.py  i2cdevice.py
