[metadata]
name = pyi2c-Eunchong_Kim
version = 0.0.1
author = Eunchong Kim
author_email = eunchong.kim.2022@gmail.com
description = A smart i2c package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/newini/pyi2c
project_urls =
    Bug Tracker = https://github.com/newini/pyi2c/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.3

[options.packages.find]
where = src
